[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "improv"
version = "0.0.2"
description = "Platform for adaptive neuroscience experiments"
authors = [{name = "Anne Draelos", email = "amw73@duke.edu"}, 
            {name = "John Pearson", email = "john.pearson@duke.edu"}]

license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
keywords = ["neuroscience", "adaptive", "closed loop"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyarrow==9.0.0",
    "PyQt5",
    "lmdb",
    "pyyaml",
    "textual==0.15.0",
    "pyzmq",
    "psutil",
    "h5py",
]
classifiers = ['Development Status :: 1 - Planning']

[project.optional-dependencies]
tests = ["pytest", "async-timeout", "pytest-asyncio", "pytest-cov", "scikit-image",]
docs = ["jupyter-book"]
lint = ["black", "flake8"]
caiman = []

[project.scripts]
improv = "improv.cli:default_invocation"

[tool.setuptools.packages.find]
include = ["improv"]
exclude = ["test", "pytest", "env", "demos", "figures"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [ ]

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
ignore = ['E203', 'W503']
max-line-length = 88
    # See https://github.com/PyCQA/pycodestyle/issues/373
per-file-ignores = """
    pytest/test_demos.py:F401,F811
    pytest/test_cli.py:F401,F811
    pytest/test_tui.py:F401,F811
    """
